ee/kubernetes/k8-behave-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cometa-behave-pod
  labels:
    app: cometa-behave-pod
spec:
  containers:
  - name: cometa-behave-container
    image: python:3.9
    ports:
    - containerPort: 8001
    volumeMounts:
    - name: cometa-volume
      mountPath: /opt/code/screenshots
      subPath: ./data/cometa/screenshots
    - name: cometa-volume
      mountPath: /opt/code/videos
      subPath: ./data/cometa/videos
    - name: cometa-volume
      mountPath: /code/behave/pdf
      subPath: ./data/cometa/pdf
    - name: cometa-volume
      mountPath: /code/behave/downloads
      subPath: ./data/cometa/downloads
    - name: cometa-volume
      mountPath: /opt/code
      subPath: ./backend/behave
    - name: cometa-volume
      mountPath: /code
      subPath: ./backend
    - name: cometa-volume
      mountPath: /etc/cron.d/crontab
      subPath: ./backend/behave/schedules/crontab

    workingDir: /opt/code/behave_django
    command: ["/bin/sh", "-c", "/code/docker/build/behave/entry.sh"]
  volumes:
    - name: cometa-volume
      persistentVolumeClaim:
        claimName: cometa-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  name: cometa-behave-service
spec:
  selector:
    app: cometa-behave-pod
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
