ee/kubernetes/k8-crontab-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cometa-crontab-pod
  labels:
    app: cometa-crontab-pod

spec:
  containers:
    - name: cometa-crontab-container
      image: cometa/crontab:1.1
  restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: cometa-crontab-service
spec:
  selector:
    app: cometa-crontab-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
