ee/kubernetes/k8-django-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cometa-django-pod
  labels:
    app: cometa-django-pod
spec:
  containers:
    - name: cometa-django
      image: cometa-python:0.1
      command: ["bash", "start.sh","-dev"]
      workingDir: /opt/code
      ports:
      - containerPort: 8000
      volumeMounts:
      - name: cometa-volume
        mountPath: /code/behave/screenshots
        subPath: ./data/cometa/screenshots
      - name: cometa-volume
        mountPath: /code/behave/videos
        subPath: ./data/cometa/videos
      - name: cometa-volume
        mountPath: /code/behave/pdf
        subPath: ./data/cometa/pdf
      - name: cometa-volume
        mountPath: /code/behave/downloads
        subPath: ./data/cometa/downloads
      - name: cometa-volume
        mountPath: /code
        subPath: ./backend
      - name: cometa-volume
        mountPath: /opt/code
        subPath: ./backend/src
      - name: cometa-volume
        mountPath: /etc/cron.d/crontab      
        subPath: ./backend/crontabs/cometa_django_crontab
      
      # resources:
      #   limits:
      #     cpu: "4"
      #     memory: "4Gi"
      #   requests:
      #     cpu: "2"
      #     memory: "2Gi"

  volumes:
    - name: cometa-volume
      persistentVolumeClaim:
        claimName: cometa-volume-claim


---


apiVersion: v1
kind: Service
metadata:
  name: cometa-django-service
spec:
  selector:
    app: cometa-django-pod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
