ee/kubernetes/k8-postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cometa-postgres-pod
  labels:
    app: cometa-postgres-pod
spec:
  containers:
  - name: postgres
    image: postgres:12.1
    ports:
    - containerPort: 5432

    volumeMounts:
        - name: cometa-volume
          mountPath: /code
          subPath: ./backend
        - name: cometa-volume
          mountPath: /var/lib/postgresql/data
          subPath: ./backend/db_data

    resources:
      limits:
        cpu: "1"
        memory: "1Gi"
      requests:
        cpu: "0.5"
        memory: "512Mi"

  volumes:
    - name: cometa-volume
      persistentVolumeClaim:
        claimName: cometa-volume-claim


---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: cometa-postgres-pod
  ports:
  - port: 5432
    targetPort: 5432
