ee/kubernetes/k8-redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cometa-redis-pod
  labels:
    app: cometa-redis-pod
spec:
  containers:
  - name: redis
    image: redis:7.2.0-alpine
    ports:
      - containerPort: 6379
    volumeMounts:
      - name: cometa-volume 
        mountPath: /data
        subPath: ./data
        
    resources:
      limits:
        cpu: "0.5"
        memory: "512Mi"
      requests:
        cpu: "0.5"
        memory: "256Mi"

    # readinessProbe:
    #   exec:
    #     command:
    #     - redis-cli
    #     - ping
    #   initialDelaySeconds: 5
    #   timeoutSeconds: 1

  volumes:
    - name: cometa-volume
      persistentVolumeClaim:
        claimName: cometa-volume-claim
        
  restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: cometa-redis-service
spec:
  selector:
    app: cometa-redis-pod
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
