ee/kubernetes/k8-socket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cometa-socket-deployment
  labels:
    app: cometa-socket-pod
spec:
  replicas: 1  # Adjust this number based on your requirements for high availability
  selector:
    matchLabels:
      app: cometa-socket-pod
  template:
    metadata:
      labels:
        app: cometa-socket-pod
    spec:
      containers:
        - name: cometa-socket-container
          image: node:14
          workingDir: /home/node/app
          ports:
          - containerPort: 3001
          command: ["npm", "run-script", "start"]
          # command: ["sleep"]
          # args: ["infinity"]
          volumeMounts:
            - name: cometa-volume
              mountPath: /home/node/app
              subPath: ./backend/ws-server
            - name: cometa-volume
              mountPath: /cometa
          resources:
            limits:
              cpu: "0.5"
              memory: "1Gi"
            requests:
              cpu: "0.25"
              memory: "512Mi"
      volumes:
        - name: cometa-volume
          persistentVolumeClaim:
            claimName: cometa-volume-claim

---
apiVersion: v1
kind: Service
metadata:
  name: cometa-socket-service
spec:
  selector:
    app: cometa-socket-pod
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
