ee/kubernetes/k8-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cometa-postgres-deployment
  namespace: cometa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cometa-postgres-pod
  template:
    metadata:
      labels:
        app: cometa-postgres-pod
    spec:
      containers:
      - name: postgres
        image: postgres:12.1
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: cometa-volume
            mountPath: /code
            subPath: ./backend
          - name: cometa-volume
            mountPath: /var/lib/postgresql/data
            subPath: ./backend/db_data
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "0.5"
            memory: "512Mi"
      volumes:
        - name: cometa-volume
          persistentVolumeClaim:
            claimName: cometa-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: cometa
spec:
  selector:
    app: cometa-postgres-pod
  ports:
  - port: 5432
    targetPort: 5432

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: cometa
spec:
  podSelector:
    matchLabels:
      app: cometa-postgres-pod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cometa-django-pod
      namespaceSelector:
        matchLabels:
          name: cometa  # Restrict ingress to pods in the 'cometa' namespace
    ports:
    - protocol: TCP
      port: 5432
